fixing overflow on nav

--- a/src/input.css
+++ b/src/input.css
@@ -14,7 +14,6 @@
   --button-background-color: #ba2ea5;
   --tag-colors: #fad1f4;
   --section-line: rgb(214, 214, 214);
-  --nav-background:  #031938;
 }
 
 html {
@@ -37,6 +36,7 @@ body {
   color: white;
   font-size: 1.5em;
   font-family: "Jura", sans-serif;
+  background-color: var(--primary-background);
   .btn {
     padding: 9px 15px;
     font-weight: 700;
@@ -256,7 +256,6 @@ body {
           top: 80px;
           gap: 8px;
           padding: 40px 0;
-          
           flex-direction: column;
           width: 100%;
           text-align: center;
